My POrg/src/objects/Object_1__c.object
<CustomObject>
    <fields>
        <fullName>Business_Quarter__c</fullName>
        <label>Business Quarter</label>
        <picklist>
            <picklistValues>
                <fullName>Q1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Q2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Q3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Q4</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Goal_Date__c</fullName>
        <label>Goal Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Instructor_Number__c</fullName>
        <label>Instructor Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Object 1s</relationshipLabel>
        <relationshipName>Object_1s</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sales_Rep__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Rep</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Object_1s</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TestArea__c</fullName>
        <label>TestArea</label>
        <length>32500</length>
        <type>LongTextArea</type>
    </fields>
    <label>Object 1</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Object 1 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Object 1s</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Test1</fullName>
        <active>false</active>
        <errorConditionFormula>ISBLANK( TestArea__c)</errorConditionFormula>
        <errorMessage>Error</errorMessage>
    </validationRules>
</CustomObject>